tests/NormalTests/paczka1/small_fuzzy/43722599.err
Error in line 3: d0m7R A940 49,2
Error in line 5: clz8Ah06 A423 75,9
Error in line 6: d0m7R S630 75,6
